--- a/airfield/package.json
+++ b/airfield/package.json
@@ -1,16 +1,19 @@
 {
   "name": "airfield",
   "version": "1.0.0",
-  "description": "",
+  "description": "An ATC game powered by PubNub",
   "main": "airfield.js",
   "dependencies": {
+    "eslint-config-google": "^0.13.0",
     "pubnub": "^4.24.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.16.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Luke Heavens",
   "license": "ISC",
   "type": "module"
 }
