--- a/atc/package.json
+++ b/atc/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "expo-asset": "^6.0.0",
+    "prop-types": "^15.7.2",
     "pubnub": "^4.24.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -18,7 +20,10 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.13.0",
+    "eslint-plugin-react": "^5.*.*"
   },
   "private": true
 }
