--- a/airfield/package.json
+++ b/airfield/package.json
@@ -4,11 +4,11 @@
   "description": "An ATC game powered by PubNub",
   "main": "airfield.js",
   "dependencies": {
-    "eslint-config-google": "^0.13.0",
     "pubnub": "^4.24.4"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
