Added additional comments, standardised colours, added splash screen, added alerts on game events

--- a/atc/app.json
+++ b/atc/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Blank Template",
-    "slug": "expo-template-blank",
+    "name": "PubNub Airways",
+    "slug": "pubnub-airways",
     "privacy": "public",
     "sdkVersion": "33.0.0",
     "platforms": [
@@ -10,10 +10,10 @@
       "web"
     ],
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "orientation": "landscape",
+    "icon": "./assets/images/airways-icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/airways-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
